20210501
  * added info about how to register ImageNet 2012 using CK
    in imagenet-2012-train and imagenet-2012-val packages

20210430
  * removed modules that are the same as in the CK framework (default repo)
  * regular update of ML systems components from the community
  * fixed copyright

20210427
  * removed some outdated or broken LLVM packages
  * added package:compiler-llvm-prebuilt
  * fixed links

20210426
  * removed unused env:python_simport
  * removed outdated cmake packages
  * added package:tool-cmake-src
  * added package:tool-cmake-prebuilt
  * added more tests

20210423
  * do not ask to select variations in "ck install package" 
    when there are 2 or more variations!

20210422
  * added --force_version to "ck detect soft" to force version.
    Useful to automate autodetection of imagenet, for example.

20210418:
  * added --quiet flag to automatically enter default anser to most questions

20210416:
  * [gfursin] extended module:package to ask a user to select a variation 
    for a given package when there are multiple versions available.

20210414:
  * regular aggregation of the CK components from the community

20210412:
  * added components and workflows from ck-mxnet, ck-tvm and ck-tbd

20210410:
  * fixed TFLite packages 1.13, 1.14 and 1.15 (eigen library).
     https://github.com/ctuning/ck/issues/138
     https://github.com/ctuning/ck/issues/139

20210407: regular aggregation of the latest dev components