@@ -1,0 +1,18 @@
+{
+  "cmd": {
+    "default": {
+      "build": "-f $#CK_PATH#$/Dockerfile.ubuntu-20.04 -t octoml/$#CK_DOCKER_NAME#$ $#CK_PATH#$",
+      "run": "-it --rm octoml/$#CK_DOCKER_NAME#$"
+    }
+  },
+  "tags": [
+    "adaptive-container",
+    "template",
+    "octoml",
+    "mlperf",
+    "test",
+    "x8664",
+    "ubuntu",
+    "20.04"
+  ]
+}
