@@ -1,0 +1,1 @@
+﻿ck display dashboard --scenario=mlperf.mobilenets
